--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.0.0",
     "ts-node": "^10.9.1",
     "use-nodecg": "github:vmichalak/use-nodecg"
