--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
         "name": "panel",
         "title": "Panel",
         "width": 2,
-        "file": "panel.html",
+        "file": "panel.dashboard.html",
         "headerColor": "#525F78"
       }
     ],
     "graphics": [
       {
-        "file": "index.html",
+        "file": "reader.graphic.html",
         "width": 1920,
         "height": 1080,
         "singleInstance": false
@@ -62,6 +62,7 @@
   "dependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
