Use dono replicant and simplify using tiltify types

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   "scripts": {
     "build": "node scripts/build.mjs --all",
     "build:extension": "node scripts/build.mjs --extension",
+    "build:graphics": "node scripts/build.mjs --graphics",
+    "build:dashboard": "node scripts/build.mjs --dashboard",
     "watch": "node scripts/build.mjs --all --watch",
     "watch:browser": "node scripts/build.mjs --dashboard --graphics --watch",
     "watch:schemas": "node scripts/build.mjs --schemas --watch",
