--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
-    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.0.0",
     "ts-node": "^10.9.1",
     "use-nodecg": "github:vmichalak/use-nodecg"
