Update package name & alert css priority

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-test",
-  "version": "0.0.0",
+  "name": "tiltify-dono",
+  "version": "1.0.0",
   "description": "",
   "homepage": "",
   "author": {
