--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       {
         "name": "panel",
         "title": "Panel",
-        "width": 2,
+        "width": 4,
         "file": "panel.dashboard.html",
         "headerColor": "#525F78"
       }
@@ -65,6 +65,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.0.0",
     "react-fitty": "^1.0.1",
@@ -80,6 +81,7 @@
     "@parcel/validator-typescript": "*",
     "@types/node": "^18",
     "@types/obs-studio": "^2.17.2",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "concurrently": "*",
     "glob": "^10.2.7",
     "nodemon": "*",
