Animate change in bar announcement

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -19,6 +19,7 @@
 		"sourceMap": true,
 		"inlineSourceMap": false,
 		"baseUrl": "src",
+		"skipLibCheck": true,
 		"paths": {
 			"nodecg-tiltify/*": [
 				"../../nodecg-tiltify/*"
