--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
+    "react-css-transition-replace": "^5.0.1",
     "react-dom": "^18.0.0",
     "react-fitty": "^1.0.1",
     "ts-node": "^10.9.1",
@@ -83,6 +84,7 @@
     "@types/node": "^18",
     "@types/obs-studio": "^2.17.2",
     "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/react-css-transition-replace": "^2.1.7",
     "concurrently": "*",
     "glob": "^10.2.7",
     "nodemon": "*",
