--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
+    "react-contenteditable": "^3.3.7",
     "react-css-transition-replace": "^5.0.1",
     "react-dom": "^18.0.0",
     "react-fitty": "^1.0.1",
