Move ticker control to new bundle and rename stuff

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -23,6 +23,9 @@
 		"paths": {
 			"nodecg-tiltify/*": [
 				"../../nodecg-tiltify/*"
+			],
+			"nodecg-ticker-control/*": [
+				"../../nodecg-ticker-control/*"
 			]
 		}
 	},
