--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "scripts": {
     "build": "node scripts/build.mjs --all",
+    "build:ci": "node scripts/build.mjs --ci",
     "build:extension": "node scripts/build.mjs --extension",
     "build:graphics": "node scripts/build.mjs --graphics",
     "build:dashboard": "node scripts/build.mjs --dashboard",
