--- a/.github/workflows/buildbranch.yml
+++ b/.github/workflows/buildbranch.yml
@@ -21,9 +21,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ${{ github.repository }}
     steps:
     # Checkout the base branch of this repository with full depth
     - name: Checkout this repository
@@ -31,6 +28,7 @@ jobs:
       with:
         token: ${{ secrets['GITHUB_TOKEN'] }}
         ref: ${{ inputs.base_branch || 'master' }}
+        path: "./${{ github.repository }}"
         fetch-depth: 0
 
     # Checkout the dependency of nodecg-tiltify
@@ -39,12 +37,13 @@ jobs:
       with:
         token: ${{ secrets['GITHUB_TOKEN'] }}
         repository: 'ericthelemur/nodecg-tiltify'
+        path: './nodecg-tiltify'
         ref: 'master'
-        path: '../nodecg-tiltify'
         fetch-depth: 0
 
     # Set the local git user config to use the GitHub Actions bot account
     - name: Set local git config user details
+      working-directory: "./${{ github.repository }}"
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
@@ -52,6 +51,7 @@ jobs:
     # Recheckout both the base and build branches and merge the base into build
     # This can "fail" if the build branch doesn't exist, but we should continue anyway
     - name: (Re)checkout both branches and merge main into build
+      working-directory: "./${{ github.repository }}"
       continue-on-error: true
       run: |
         git checkout ${{ inputs.base_branch || 'master' }}
@@ -79,10 +79,12 @@ jobs:
 
     # Install NPM dependencies
     - name: Install NPM dependencies
+      working-directory: "./${{ github.repository }}"
       run: npm ci
 
     # Actually build everything
     - name: Build
+      working-directory: "./${{ github.repository }}"
       run: |
         npm run clean
         npm run build:ci
@@ -91,6 +93,7 @@ jobs:
     # This can "fail" if there are no newly changed/built files, but we should continue anyway
     - name: Commit built files
       id: commit
+      working-directory: "./${{ github.repository }}"
       continue-on-error: true
       run: |
         git add -f dashboard || true
@@ -104,3 +107,4 @@ jobs:
       with:
         github_token: ${{ secrets['GITHUB_TOKEN'] }}
         branch: ${{ inputs.build_branch || 'build' }}
+        directory: "./${{ github.repository }}"
