Add install instructions to readme

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "nodecg": {
     "compatibleRange": "^2.0.0",
     "bundleDependencies": {
-      "nodecg-tiltify": "*",
-      "nodecg-ticker-control": "*",
-      "nodecg-dono-control": "*"
+      "nodecg-ticker-control": "*"
     },
     "graphics": [
       {
