--- a/package.json
+++ b/package.json
@@ -8,16 +8,6 @@
     "email": "owenconnors1@gmail.com",
     "url": ""
   },
-  "files": [
-    "dashboard",
-    "graphics",
-    "extension.js",
-    "extension"
-  ],
-  "keywords": [
-    "",
-    "nodecg-bundle"
-  ],
   "nodecg": {
     "compatibleRange": "^2.0.0",
     "bundleDependencies": {
@@ -41,42 +31,24 @@
       }
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "scripts": {
-    "build": "node scripts/build.mjs --all",
-    "build:ci": "node scripts/build.mjs --ci",
-    "build:extension": "node scripts/build.mjs --extension",
-    "build:graphics": "node scripts/build.mjs --graphics",
-    "build:dashboard": "node scripts/build.mjs --dashboard",
-    "build:schema": "trash src/types/schemas && nodecg schema-types",
-    "watch": "node scripts/build.mjs --all --watch",
-    "watch:browser": "node scripts/build.mjs --dashboard --graphics --watch",
-    "watch:schemas": "node scripts/build.mjs --schemas --watch",
-    "dev": "concurrently --kill-others \"npm run watch:schemas\" \"npm run watch:browser\" \"nodemon\"",
-    "clean": "trash .parcel-cache dashboard extension graphics"
+    "start": "cd ../.. && node -r source-map-support/register index.js",
+    "build": "node ../wasd-common/shared/scripts/build.mjs nodecg-dono-control",
+    "watch": "node ../wasd-common/shared/scripts/build.mjs nodecg-dono-control --watch",
+    "clean": "node ../wasd-common/shared/scripts/build.mjs nodecg-dono-control --clean-only",
+    "types": "nodecg schema-types",
+    "nodemon": "nodemon --config ../wasd-common/shared/nodemon.json",
+    "dev": "concurrently --kill-others \"npm run watch -- --types\" \"npm run watch -- --browser\" \"npm run nodemon\""
   },
   "dependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.1",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.0.0",
     "react-toastify": "^9.1.3",
     "ts-node": "^10.9.1",
-    "use-nodecg": "github:vmichalak/use-nodecg"
+    "use-nodecg": "github:vmichalak/use-nodecg",
+    "wasd-common": "1.0.0"
   },
   "devDependencies": {
     "@nodecg/types": "^2.0.0",
@@ -85,9 +57,8 @@
     "@parcel/reporter-cli": "*",
     "@parcel/validator-typescript": "*",
     "@types/node": "^18",
-    "concurrently": "*",
-    "glob": "^10.2.7",
-    "nodemon": "*",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "trash-cli": "*",
     "typescript": "^5.1.3"
   },
