--- a/package.json
+++ b/package.json
@@ -47,16 +47,12 @@
     "react-dom": "^18.0.0",
     "react-toastify": "^9.1.3",
     "ts-node": "^10.9.1",
-    "use-nodecg": "github:vmichalak/use-nodecg",
+    "use-nodecg": "github:ericthelemur/use-nodecg",
     "wasd-common": "1.0.0",
     "nodecg-tiltify": "1.0.0"
   },
   "devDependencies": {
     "@nodecg/types": "^2.0.0",
-    "@parcel/config-default": "*",
-    "@parcel/core": "*",
-    "@parcel/reporter-cli": "*",
-    "@parcel/validator-typescript": "*",
     "@types/node": "^18",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
