--- a/package.json
+++ b/package.json
@@ -8,16 +8,6 @@
     "email": "owenconnors1@gmail.com",
     "url": ""
   },
-  "files": [
-    "dashboard",
-    "graphics",
-    "extension.js",
-    "extension"
-  ],
-  "keywords": [
-    "",
-    "nodecg-bundle"
-  ],
   "nodecg": {
     "compatibleRange": "^2.0.0",
     "bundleDependencies": {
@@ -25,35 +15,21 @@
     },
     "graphics": [
       {
-        "file": "bar.graphic.html",
+        "file": "bar/bar.graphic.html",
         "width": 1920,
         "height": 1080,
         "singleInstance": false
       }
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "scripts": {
-    "build": "node scripts/build.mjs --all",
-    "build:extension": "node scripts/build.mjs --extension",
-    "build:graphics": "node scripts/build.mjs --graphics",
-    "build:dashboard": "node scripts/build.mjs --dashboard",
-    "build:schema": "trash src/types/schemas && nodecg schema-types",
-    "watch": "node scripts/build.mjs --all --watch",
-    "watch:browser": "node scripts/build.mjs --dashboard --graphics --watch",
-    "watch:schemas": "node scripts/build.mjs --schemas --watch",
-    "dev": "concurrently --kill-others \"npm run watch:schemas\" \"npm run watch:browser\" \"nodemon\""
+    "start": "cd .. && npm run start",
+    "build": "cross-env-shell node ../wasd-common/shared/scripts/build.mjs $npm_package_name",
+    "watch": "npm run build -- --watch",
+    "clean": "npm run build -- --clean-only",
+    "types": "nodecg schema-types",
+    "nodemon": "nodemon --config ../wasd-common/shared/nodemon.json",
+    "dev": "concurrently --kill-others \"npm run watch -- --types\" \"npm run watch -- --browser\" \"npm run nodemon\""
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -71,11 +47,6 @@
   },
   "devDependencies": {
     "@nodecg/types": "^2.0.0",
-    "@parcel/config-default": "*",
-    "@parcel/core": "*",
-    "@parcel/reporter-cli": "*",
-    "@parcel/transformer-sass": "^2.10.2",
-    "@parcel/validator-typescript": "*",
     "@types/node": "^18",
     "@types/obs-studio": "^2.17.2",
     "@types/react": "^18.2.45",
@@ -86,8 +57,8 @@
     "concurrently": "*",
     "glob": "^10.2.7",
     "nodemon": "*",
-    "trash-cli": "*",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "cross-env": "*"
   },
   "license": "MIT"
 }
