--- a/src/extension/tsconfig.json
+++ b/src/extension/tsconfig.json
@@ -1,8 +1,3 @@
 {
-	"extends": "../../tsconfig.json",
-	"include": [
-		"**/*.tsx",
-		"**/*.ts",
-		"../types/**/*.ts"
-	]
+	"extends": "../../tsconfig.json"
 }
