Move OBS sources to fit

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "use-nodecg": "github:ericthelemur/use-nodecg",
     "nodecg-people-control": "1.0.0",
     "nodecg-dono-control": "1.0.0",
+    "nodecg-obs-control": "1.0.0",
     "speedcontrol-util": "^0.6.1"
   },
   "devDependencies": {
