--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-textfit": "git+http://github.com/ericthelemur/react-textfit.git",
     "react-transition-group": "^4.4.5",
     "ts-node": "^10.9.1",
+    "moment": "^2.30.0",
     "use-nodecg": "github:ericthelemur/use-nodecg",
     "nodecg-people-control": "1.0.0",
     "nodecg-dono-control": "1.0.0",
