--- a/package.json
+++ b/package.json
@@ -98,11 +98,11 @@
     "ts-node": "^10.9.1",
     "moment": "^2.30.0",
     "use-nodecg": "github:ericthelemur/use-nodecg",
-    "nodecg-people-control": "1.0.0",
-    "nodecg-tiltify": "1.0.0",
-    "nodecg-dono-control": "1.0.0",
-    "nodecg-obs-control": "1.0.0",
-    "speedcontrol-util": "^0.6.1"
+    "speedcontrol-util": "^0.6.1",
+    "chalk": "3.0.0",
+    "fs-extra": "7.0.1",
+    "json-schema-defaults": "0.4.0",
+    "json-schema-to-typescript": "11.0.3"
   },
   "devDependencies": {
     "@nodecg/types": "^2.0.0",
