--- a/package.json
+++ b/package.json
@@ -10,63 +10,74 @@
   },
   "nodecg": {
     "compatibleRange": "^2.0.0",
-    "bundleDependencies": {
-      "nodecg-ticker-control": "*"
-    },
     "dashboardPanels": [
       {
-        "name": "countdown-control",
+        "name": "people",
+        "title": "People",
+        "width": 4,
+        "file": "people/dashboard/people-control/people.dashboard.html",
+        "headerColor": "#525F78"
+      },
+      {
+        "name": "ticker-control",
+        "title": "Ticker Control",
+        "fullbleed": true,
+        "file": "ticker/dashboard/ticker-control/tickercontrol.dashboard.html",
+        "headerColor": "#525F78"
+      },
+      {
+        "name": "countdown",
         "title": "Countdown",
         "width": 2,
-        "file": "countdown.dashboard.html",
+        "file": "wasd/dashboard/countdown/countdown.dashboard.html",
         "headerColor": "#525F78"
       }
     ],
     "graphics": [
       {
-        "file": "bar/bar.graphic.html",
+        "file": "wasd/graphics/bar/bar.graphic.html",
         "width": 1920,
         "height": 70,
         "singleInstance": false
       },
       {
-        "file": "background/background.graphic.html",
+        "file": "wasd/graphics/background/background.graphic.html",
         "width": 1920,
         "height": 1080,
         "singleInstance": false
       },
       {
-        "file": "overlay/RUN-1.html",
+        "file": "wasd/graphics/overlay/RUN-1.html",
         "width": 1920,
         "height": 1010,
         "singleInstance": true
       },
       {
-        "file": "overlay/RUN-2.html",
+        "file": "wasd/graphics/overlay/RUN-2.html",
         "width": 1920,
         "height": 1010,
         "singleInstance": true
       },
       {
-        "file": "overlay/RUN-RACE.html",
+        "file": "wasd/graphics/overlay/RUN-RACE.html",
         "width": 1920,
         "height": 1010,
         "singleInstance": true
       },
       {
-        "file": "overlay/RUN-BACKUP.html",
+        "file": "wasd/graphics/overlay/RUN-BACKUP.html",
         "width": 1920,
         "height": 1010,
         "singleInstance": true
       },
       {
-        "file": "break/BREAK.html",
+        "file": "wasd/graphics/break/BREAK.html",
         "width": 1920,
         "height": 1010,
         "singleInstance": false
       },
       {
-        "file": "overlay/COMMS.html",
+        "file": "wasd/graphics/overlay/COMMS.html",
         "width": 1920,
         "height": 1010,
         "singleInstance": false
@@ -74,35 +85,36 @@
     ]
   },
   "scripts": {
-    "start": "cd .. && npm run start",
-    "build": "cross-env-shell node scripts/build.mjs $npm_package_name",
+    "start": "cd ../.. && node -r source-map-support/register index.js",
+    "build": "node scripts/build.mjs",
     "watch": "npm run build -- --watch",
     "clean": "npm run build -- --clean-only",
     "types": "node scripts/types.mjs",
-    "nodemon": "nodemon --config ../wasd-common/shared/nodemon.json",
+    "nodemon": "nodemon --config scripts/nodemon.json",
     "dev": "concurrently --kill-others \"npm run watch -- --types\" \"npm run watch -- --browser\" \"npm run nodemon\""
   },
   "dependencies": {
     "@parcel/config-default": "^2.12.0",
     "@parcel/core": "^2.12.0",
     "@parcel/reporter-cli": "^2.12.0",
-    "@parcel/transformer-sass": "^2.12.0",
+    "@parcel/transformer-sass": "2.12.0",
     "@parcel/validator-typescript": "^2.12.0",
-    "chalk": "3.0.0",
+    "chalk": "5.3.0",
     "clone": "^2.1.2",
-    "fs-extra": "7.0.1",
+    "fs-extra": "11.2.0",
     "get-current-line": "^7.4.0",
     "json-schema-defaults": "0.4.0",
-    "json-schema-to-typescript": "11.0.3",
+    "json-schema-to-typescript": "15.0.3",
     "markdown-to-jsx": "^7.4.1",
     "moment": "^2.30.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
+    "react-beautiful-dnd": "13.1.1",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-contenteditable": "^3.3.7",
     "react-css-transition-replace": "^5.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.3.1",
     "react-fitty": "^1.0.1",
     "react-textfit": "git+http://github.com/ericthelemur/react-textfit.git",
     "react-transition-group": "^4.4.5",
@@ -113,18 +125,19 @@
   "devDependencies": {
     "@nodecg/types": "^2.0.0",
     "@types/clone": "^2.1.4",
-    "@types/node": "^18",
+    "@types/node": "^22.9.0",
     "@types/obs-studio": "^2.17.2",
-    "@types/react": "^18.2.0",
-    "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/react": "18.3.12",
+    "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-css-transition-replace": "^2.1.7",
-    "@types/react-dom": "^18.2.0",
+    "@types/react-dom": "18.3.1",
     "@types/react-textfit": "^1.1.4",
     "concurrently": "*",
     "cross-env": "*",
-    "glob": "^10.2.7",
+    "glob": "^11.0.0",
     "nodemon": "*",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "nodecg-dono-control": "1.0.0"
   },
   "license": "MIT",
   "@parcel/bundler-default": {
