--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     ]
   },
   "scripts": {
-    "start": "cd ../.. && node -r source-map-support/register index.js",
+    "start": "cd ../.. && node -r source-map-support/register --trace-uncaught index.js",
     "build": "node scripts/build.mjs",
     "watch": "npm run build -- --watch",
     "clean": "npm run build -- --clean-only",
