--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "react-toastify": "^11.0.3",
     "react-transition-group": "^4.4.5",
     "speedcontrol-util": "^0.6.1",
+    "tiltify-api-client": "^2.2.1",
     "tiny-typed-emitter": "2.1.0",
     "ts-node": "^10.9.1",
     "use-nodecg": "github:ericthelemur/use-nodecg"
