--- a/package.json
+++ b/package.json
@@ -170,12 +170,14 @@
     "dev": "concurrently --kill-others \"npm run watch -- --types\" \"npm run watch -- --browser\" \"npm run nodemon\""
   },
   "dependencies": {
+    "@loupedeck/node": "^1.2.0",
     "@parcel/config-default": "^2.12.0",
     "@parcel/core": "^2.12.0",
     "@parcel/reporter-cli": "^2.12.0",
     "@parcel/resolver-glob": "^2.13.0",
     "@parcel/transformer-sass": "2.12.0",
     "@parcel/validator-typescript": "^2.12.0",
+    "canvas": "^3.2.0",
     "chalk": "5.3.0",
     "clone": "^2.1.2",
     "fs-extra": "11.2.0",
@@ -183,9 +185,12 @@
     "json-edit-react": "^1.17.1",
     "json-schema-defaults": "0.4.0",
     "json-schema-to-typescript": "15.0.3",
+    "loupedeck": "^7.0.0",
     "markdown-to-jsx": "^7.4.1",
     "moment": "^2.30.0",
+    "node-canvas-text": "^1.0.2",
     "obs-websocket-js": "^5.0.3",
+    "opentype.js": "^1.3.4",
     "osc": "2.4.4",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
@@ -209,6 +214,7 @@
     "@nodecg/types": "^2.0.0",
     "@types/clone": "^2.1.4",
     "@types/node": "^22.9.0",
+    "@types/node-canvas-text": "^1.0.3",
     "@types/obs-studio": "^2.17.2",
     "@types/react": "18.3.12",
     "@types/react-beautiful-dnd": "13.1.8",
