--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "dev": "concurrently --kill-others \"npm run watch -- --types\" \"npm run watch -- --browser\" \"npm run nodemon\""
   },
   "dependencies": {
-    "@loupedeck/node": "^1.2.0",
+    "@ericthelemur/node": "^1.3.1",
     "@parcel/config-default": "^2.12.0",
     "@parcel/core": "^2.12.0",
     "@parcel/reporter-cli": "^2.12.0",
