--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "mixer-mock": ".\\src\\mixer\\osc-sim\\.venv\\Scripts\\python .\\src\\mixer\\osc-sim\\server.py"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.2",
     "@ericthelemur/node": "^1.3.1",
     "@parcel/config-default": "^2.12.0",
     "@parcel/core": "^2.12.0",
@@ -185,6 +186,7 @@
     "@parcel/resolver-glob": "^2.13.0",
     "@parcel/transformer-sass": "2.12.0",
     "@parcel/validator-typescript": "^2.12.0",
+    "@uiw/react-codemirror": "^4.25.3",
     "canvas": "^3.2.0",
     "chalk": "5.3.0",
     "clone": "^2.1.2",
