--- a/package.json
+++ b/package.json
@@ -207,6 +207,7 @@
     "canvas": "^3.2.0",
     "chalk": "5.3.0",
     "clone": "^2.1.2",
+    "eventsource-client": "^1.2.0",
     "fs-extra": "11.2.0",
     "get-current-line": "^7.4.0",
     "json-edit-react": "^1.29.0",
