--- a/package.json
+++ b/package.json
@@ -185,7 +185,7 @@
     ]
   },
   "scripts": {
-    "start": "npx nodecg start",
+    "start": "node --trace-uncaught --unhandled-rejections none .\\node_modules\\nodecg\\index.js",
     "build": "node scripts/build.mjs",
     "watch": "npm run build -- --watch --browser",
     "clean": "npm run build -- --clean-only",
@@ -207,7 +207,7 @@
     "canvas": "^3.2.0",
     "chalk": "5.3.0",
     "clone": "^2.1.2",
-    "eventsource-client": "^1.2.0",
+    "eventsource-parser": "^3.0.6",
     "fs-extra": "11.2.0",
     "get-current-line": "^7.4.0",
     "json-edit-react": "^1.29.0",
