--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
         "headerColor": "#525F78"
       },
       {
+        "name": "discord",
+        "title": "Discord Control",
+        "width": 3,
+        "file": "discord/dashboard/discord.dashboard.html",
+        "headerColor": "#525F78"
+      },
+      {
         "name": "dono-reader",
         "title": "Donation Reader",
         "file": "donos/dashboard/reader/reader.graphic.html",
@@ -185,7 +192,7 @@
     ]
   },
   "scripts": {
-    "start": "node --trace-uncaught --unhandled-rejections none .\\node_modules\\nodecg\\index.js",
+    "start": "node -r source-map-support/register --trace-uncaught --unhandled-rejections none .\\node_modules\\nodecg\\index.js",
     "build": "node scripts/build.mjs",
     "watch": "npm run build -- --watch --browser",
     "clean": "npm run build -- --clean-only",
@@ -207,6 +214,7 @@
     "canvas": "^3.2.0",
     "chalk": "5.3.0",
     "clone": "^2.1.2",
+    "discord.js": "^14.25.1",
     "eventsource-parser": "^3.0.6",
     "fs-extra": "11.2.0",
     "get-current-line": "^7.4.0",
@@ -256,6 +264,7 @@
     "cross-env": "*",
     "glob": "^11.0.0",
     "nodemon": "*",
+    "source-map-support": "^0.5.21",
     "typescript": "^5.1.3"
   },
   "license": "MIT",
