--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
     "@parcel/resolver-glob": "^2.13.0",
     "@parcel/transformer-sass": "2.12.0",
     "@parcel/validator-typescript": "^2.12.0",
+    "@types/js-cookie": "^3.0.6",
     "@uiw/react-codemirror": "^4.25.3",
     "canvas": "^3.2.0",
     "chalk": "5.3.0",
@@ -218,6 +219,7 @@
     "eventsource-parser": "^3.0.6",
     "fs-extra": "11.2.0",
     "get-current-line": "^7.4.0",
+    "js-cookie": "^3.0.5",
     "json-edit-react": "^1.29.0",
     "json-schema-defaults": "0.4.0",
     "json-schema-to-typescript": "15.0.3",
